--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Test init many samples
         run: ./test/test_init_many_samples.sh
 
+      - name: Dryrun quantify
+        run: ./test/test_external_genomes.sh
+
   run-qc-and-assembly:
     runs-on: ubuntu-latest
     needs: build-and-dryrun
@@ -163,7 +166,7 @@ jobs:
 
   run-genecatalog:
     runs-on: ubuntu-latest
-    needs: run-qc-and-assembly
+    needs: [ build-and-dryrun, run-qc-and-assembly ]
     env:
       N_THREADS: 2
       MEM: 3
@@ -236,7 +239,7 @@ jobs:
 
   run-binning:
     runs-on: ubuntu-latest
-    #needs: run-qc-and-assembly
+    needs: build-and-dryrun
     env:
       N_THREADS: 2
       MEM: 3
@@ -306,20 +309,14 @@ jobs:
           path: databases
           key: ${{ steps.get-envs.outputs.cache-primary-key }}
 
-
-
-  # full-test:
+  # run-quantify-genomes:
   #   runs-on: ubuntu-latest
   #   needs: build-and-dryrun
-  #   strategy:
-  #     max-parallel: 1
-  #   env:
-  #     N_THREADS: 2
-  #     MEM: 3
 
   #   steps:
   #     - name: Checkout
   #       uses: actions/checkout@v3.5.2
+
 
   #     - uses: mamba-org/setup-micromamba@v1
   #       with:
@@ -333,21 +330,12 @@ jobs:
   #         python -m pip install . --no-deps -vv
   #         atlas --help
 
-  #     # - name: Clone Example Data Repository
-  #     #   run: git clone https://github.com/metagenome-atlas/example_data.git
-      
-  #     - name: Run Test
-  #       run: |
-  #         test/test_ci.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2
 
-  #     - name: Store Logs
-  #       uses: actions/upload-artifact@v2
+  #     - name: get conda envs
+  #       id: get-envs
+  #       uses: actions/cache/restore@v3
   #       with:
-  #         name: logs
-  #         path: test_ci/logs
+  #         path: databases
+  #         key: conda-envs-assembly
+  #         restore-keys: conda-envs-*
 
-  #     - name: Store Sample Logs
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: sample_logs
-  #         path: test_ci/Sample1/logs
