--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -40,7 +40,7 @@ wildcard_constraints:
 include: "rules/sample_table.smk"
 include: "rules/download.smk"  # contains hard coded variables
 include: "rules/qc.smk"
-include: "rules/screen.smk" # expects function get_input_fastq defined in qc
+include: "rules/screen.smk"  # expects function get_input_fastq defined in qc
 include: "rules/assemble.smk"
 include: "rules/binning.smk"
 include: "rules/derep.smk"
@@ -202,9 +202,10 @@ rule qc:
     output:
         touch("finished_QC"),
 
+
 rule screen:
     input:
-        "QC/screen/sketch_comparison.tsv.gz"
+        "QC/screen/sketch_comparison.tsv.gz",
 
 
 # overwrite commands in rules/download.snakefile
@@ -223,13 +224,11 @@ onerror:
 
 for r in workflow.rules:
     if not "mem_mb" in r.resources:
-
         if "mem" in r.resources:
             r.resources["mem_mb"] = r.resources["mem"] * 1000
         else:
             # default
             r.resources["mem_mb"] = config["mem"] * 1000
-
 
     # add time if ot present. Simple jobs use simple time
 
