--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -7,9 +7,9 @@ genome_filter_criteria: "(Completeness-5*Contamination >50 ) & (Length_scaffolds
 exclude_unplacable_genomes: false
 
 genome_dereplication:
-  ANI: 0.95                        ## Genome dreplication threshold
-  overlap: 0.2                  # See more on https://drep.readthedocs.io/en/latest/module_descriptions.html
-  greedy_clustering: "auto"     # Add options for greedy clustering 'auto' when using more than 5k bins
+  ANI: 0.95 ## Genome dreplication threshold
+  overlap: 0.2 # See more on https://drep.readthedocs.io/en/latest/module_descriptions.html
+  greedy_clustering: "auto" # Add options for greedy clustering 'auto' when using more than 5k bins
   opt_parameters: ""
   score:
     completeness: 1
@@ -20,20 +20,28 @@ genome_dereplication:
 
 genome_aligner: "minimap"
 
-bin_quality_asesser: checkm2          #[ checkm2, busco, cehckm]
+bin_quality_asesser: checkm2 #[ checkm2, busco, cehckm]
 
 semibin_options: ""
 semibin_train_extra: ""
 
-
 filter_chimieric_bins: true
-gunc_database: "progenomes"  # progenomes or gtdb
+gunc_database: "progenomes" # progenomes or gtdb
 
-
-binner:                           # If DASTool is used as final_binner, use predictions of this binners
+binner: # If DASTool is used as final_binner, use predictions of this binners
   - metabat
   - maxbin
 #  - vamb
 
+cobinning_readmapping_id: 0.95 #when mapping different reads to contigs from different samples use less stringent alignment threshold
 
-cobinning_readmapping_id: 0.95  #when mapping different reads to contigs from different samples use less stringent alignment threshold
+preprocess_qtrim: "rl"
+preprocess_kmer_trim: "r"
+preprocess_minimum_base_quality: 10
+preprocess_allowable_kmer_mismatches: 1
+preprocess_reference_kmer_match_length: 27
+preprocess_minimum_passing_read_length: 51
+preprocess_minimum_base_frequency: 0.05
+preprocess_max_ns: -1
+preallocate_ram: "t"
+error_correction_overlapping_pairs: "t"
