--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -3,14 +3,14 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python >=3.8, < 3.12
+  - python =3.11
   - mamba
-  - bbmap >= 39.01, <40
-  - snakemake-minimal >= 7.18.1, <7.26
-  - pygments
-  - networkx
-  - graphviz
-  - pandas >=1.2, <1.6
+  - bbmap >= 39.01
+  - snakemake-minimal >= 8
+  #- pygments
+  #- networkx
+  #- graphviz
+  - pandas =2
   - pyarrow # for parquet reading
   - click >=7
   - ruamel.yaml >=0.17
