--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -3,10 +3,10 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python >=3.8, < 3.12
+  - python >=3.10, < 3.12
   - mamba
   - bbmap >= 39.01, <40
-  - snakemake-minimal >= 7.18.1, <7.26
+  - snakemake-minimal >= 8.12, <8.15
   - pygments
   - networkx
   - graphviz
@@ -16,3 +16,4 @@ dependencies:
   - ruamel.yaml >=0.17
   - cookiecutter
   - wget
+  -  snakemake-executor-plugin-slurm
