--- a/workflow/envs/dram.yaml
+++ b/workflow/envs/dram.yaml
@@ -2,5 +2,24 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - dram >= 1.4.6, <1.5 #Shold define all correct verrsions See https://github.com/bioconda/bioconda-recipes/pull/41518
-
+  - python >=3.8
+  - altair >=4
+  - networkx
+  - numpy
+  - openpyxl
+  - pandas >=1.5, <2
+  - scikit-bio >=0.5.8, <0.6
+  - sqlalchemy
+  - prodigal
+  - scipy >=1.9
+  - mmseqs2 >10.6d92c
+  - hmmer
+  - trnascan-se >=2
+  - barrnap
+  - ruby
+  - parallel
+  - wget
+  - curl
+  - pip
+  - pip:
+    - git+https://github.com/SilasK/DRAM.git
