install snakefmt with bioconda

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,6 +24,10 @@ jobs:
         with:
           environment-name: formatting
           create-args: black snakefmt
+          condarc: |
+            channels:
+              - conda-forge
+              - bioconda
           cache-environment: true
 
       - name: Check Black formatting
