ignore some files

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -22,4 +22,6 @@ jobs:
       - name: Codespell
         uses: codespell-project/actions-codespell@v2
         with:
-          ignore_words_list: Crate,crate
+          check_filenames: true
+          skip: ".git,*.pdf,*.svg,versioneer.py,*.css,*.html"
+          check_hidden: true
