move codespell options to setup.config

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,10 @@ style = pep440
 versionfile_source = atlas/_version.py
 versionfile_build = atlas/_version.py
 tag_prefix = v
+
+
+[codespell]
+check_filenames = true
+skip = ".git,*.pdf,*.svg,versioneer.py,*.css,*.html"
+ignore-words = "BRITE"
+check_hidden = true
