--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag_prefix = v
 
 
 [codespell]
-check_filenames = true
-skip = ".git,*.pdf,*.svg,versioneer.py,*.css,*.html"
-ignore-words = "BRITE"
-check_hidden = true
+check-filenames = 
+skip = .git,*.pdf,*.svg,versioneer.py,*.css,*.html
+ignore-words-list = BRITE
+check-hidden = 
