--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -227,7 +227,7 @@ for r in workflow.rules:
         # default
         r.resources["mem_mb"] = config["mem"] * 1000
 
-    # add time if ot present. Simple jobs use simple time
+    # add time if not present. Simple jobs use simple time
 
     if "time_min" not in r.resources:
         r.resources["time_min"] = config["runtime"]["default"] * 60
