codespell except test and databases

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,6 @@ tag_prefix = v
 
 [codespell]
 check-filenames = 
-skip = .git,*.pdf,*.svg,versioneer.py,*.css,*.html
+skip = .git,*.pdf,*.svg,versioneer.py,*.css,*.html,databases,test
 ignore-words-list = BRITE
 check-hidden = 
